# lohi_splitter

./: LICENSE  README.md  pyproject.toml  requirements.in
src/lohi_splitter/: __init__.py  lo_splitter.py  min_vertex_k_cut.py  utils.py
tutorial/: 00_hi_split_quick.ipynb  01_hi_split_coarsening.ipynb  02_lo_split.ipynb  03_hi_under_the_hood.ipynb
tutorial/data/: drd2_hi.csv  drd2_lo.csv
